--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-   <h3><li id = "ALBUMS"><a href="https://codepen.io/Envenomed-Souls/pen/LEEEMdY
+   <h3><li id = "ALBUMS"><a href="https://envenomedsouls.github.io/scandic/
 ">Main page
   
 </body>
